Add basic program

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
-name = 
-author = 
-author-email = 
+name = ogsdownloader
+author = Serene-Arc
+author-email = serenical@gmail.com
+version = 0.1.0
 
 [files]
-packages =
+packages = ogsdownloader
 
